# python_developer-20250225T093041Z-001

./: .env  .gitignore  README.md  docker-compose.yml  pyproject.toml
Temp notes/: Task_in_simple_term.txt  loom_video_notes.txt
fastapi_service/: Dockerfile  Readme.md  main.py  requirements.txt
fastapi_service/tests/: test_main.py
